force-app/main/default/objects/Integration_Payloads__mdt/Integration_Payloads__mdt.object-meta.xml
<CustomObject>
    <label>Integration Payloads</label>
    <pluralLabel>Integration Payloads</pluralLabel>
</CustomObject>