force-app/main/default/objects/Integration_Payloads__mdt/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <description>Request method for payload</description>
    <label>Request Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELETE</fullName>
                <default>true</default>
                <label>DELETE</label>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>