force-app/main/default/objects/Integration_Payloads__mdt/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <description>trigger record object API name that sends payload</description>
    <label>Trigger Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>