force-app/main/default/objects/Integration_Payloads__mdt/listViews/Integration_Payload_View.listView-meta.xml
<ListView>
    <fullName>Integration_Payload_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Request_Method__c</columns>
    <columns>Trigger_Object__c</columns>
    <columns>Payload__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration Payload View</label>
    <language>en_US</language>
</ListView>